[tool.poetry]
name = "cli-tools"
version = "0.1.0"
description = "A collection of simple cli tools I built with python"
authors = ["Tensor <narutokelechi@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
google-cli = "cli_google:app_cli"

[tool.poetry.dependencies]
python = "^3.7"
rich = "^13.7.1"
typer = "^0.9.0"
google-search = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

package-mode = false